Updated CSS, JS, HTML
- Changed Wireframe
- Added test Imgs
- Added test img function JS
- Added inline for test imgs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 </ul>
         </div>
         <div class="item3">
+<img class="duck1" src="img/bag.jpg" alt="new product 1" width="200px" height="150px">
+<img class="duck2" src="img/bag.jpg" alt="new product 2" width="200px" height="150px">
+<img class="duck3" src="img/bag.jpg" alt="new product 3" width="200px" height="150px">
+
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin
                 pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae
                 volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec
@@ -38,8 +42,6 @@
                 semper
                 risus. In adipiscing ultrices tellus, in suscipit massa vehicula eu.</p>
         </div>
-        <div class="item4">images</div>
-        <div class="item5">footer</div>
 
     </div>
     <script></script>
