--- a/index.html
+++ b/index.html
@@ -10,29 +10,21 @@
 </head>
 
 <body>
+
     <div class="grid-container">
         <div class="item1">
             <h1>Odd Duck</h1>
         </div>
         <div class="item2">
             <h5>Results</h5>
-                <ul>
-                    <ol></ol>
-                    <ol>image2 </ol>
-                    <ol>image3 </ol>
-                    <ol>image4 </ol>
-                    <ol>image5 </ol>
-                    <ol>image6 </ol>
-                    <ol>image7 </ol>
-                    <ol>image8 </ol>
-                    <ol>image9</ol>
-                </ul>
+            <ul>
+            </ul>
         </div>
         <div class="item3">
-<img class="duck1" src="img/bag.jpg" alt="new product 1" width="200px" height="150px">
-<img class="duck2" src="img/bag.jpg" alt="new product 2" width="200px" height="150px">
-<img class="duck3" src="img/bag.jpg" alt="new product 3" width="200px" height="150px">
-
+            <img id="image1" src=""/>
+            <img id="image2" src=""/>
+            <img id="image3" src=""/>
+            
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin
                 pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae
                 volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec
@@ -44,7 +36,8 @@
         </div>
 
     </div>
-    <script></script>
+    
+    <script src="ducks.js"></script>
 </body>
 
 </html>
