Made Image Clicker
Added image clicker JS
- Not functional currently
- Fixed website crashing (due to loop)
- Removed while loop (will fix)

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             <ul>
             </ul>
         </div>
-        <div class="item3">
-            <img id="image1" src=""/>
+        <div id="products">
+            <img id="product1" src=""/>
             <img id="image2" src=""/>
             <img id="image3" src=""/>
             
+            <canvas width="500" height="300" id="canvas">The browser doesn't support the canvas element</canvas>
+
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin
                 pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae
                 volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec
