--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
     </div>
     
+    <script
+src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+</script>
     <script src="ducks.js"></script>
 </body>
 
