Updated HTML, CSS, and JS
Added myChart

--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <main>
-        <div>
+      <div>
         <h1>ODD DUCK Products</h1>
-        <p>ATTENTION: This message is coming from the Research and Development department here at ODD DUCK Products.  Vote for 1 of the 3 products displayed that you believe should be the next <strong>new</strong> product brought to market. Please delegate one person on your team to vote so that we can ensure each department has input. May the ODDS ever be in our favor!</p>
-        </div>
-        <section>
-            <img id="image1" src=""/>
-            <img id="image2" src=""/>
-            <img id="image3" src=""/>
-        </section>
-        <div>View Results</div>
-        <ul></ul>
-        <div>
-            <canvas id="myChart"></canvas>
-        </div>
+        <p>
+          Please select one of the three (3) products down below. Once products
+          have cycled through twenty-five (25) voting session, please click the
+          results tab to view results.
+        </p>
+      </div>
+      <section>
+        <img id="image1" src="" />
+        <img id="image2" src="" />
+        <img id="image3" src="" />
+      </section>
+      <div>View Results</div>
+      <ul></ul>
+      <div>
+        <canvas id="myChart"></canvas>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
     <script src="duck.js"></script>
-</body>
-
+  </body>
 </html>
