--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </p>
       </div>
       <section>
-        <img id="image1" src="" />
-        <img id="image2" src="" />
-        <img id="image3" src="" />
+        <img id="image1" src="" width="200 px" height="200 px"/>
+        <img id="image2" src="" width="200 px" height="200 px"/>
+        <img id="image3" src="" width="200 px" height="200 px"/>
       </section>
       <div>View Results</div>
       <ul></ul>
