--- a/index.html
+++ b/index.html
@@ -9,24 +9,28 @@
 
   <body>
     <main>
-      <div>
-        <h1>ODD DUCK Products</h1>
-        <p>
-          Please select one of the three (3) products down below. Once products
-          have cycled through twenty-five (25) voting session, please click the
-          results tab to view results.
-        </p>
-      </div>
-      <section>
-        <img id="image1" src="" />
-        <img id="image2" src="" />
-        <img id="image3" src="" />
-      </section>
-      <div>View Results</div>
-      <ul></ul>
-      <div>
-        <canvas id="myChart"></canvas>
-      </div>
+
+<div class="container">
+  <div>
+    <h1><span>ODD </span>DUCK<span> PRODUCTS</span></h1>
+    <p>
+      Please select one of the three (3) products down below. Once products
+      have cycled through twenty-five (25) voting session, please click the
+      results tab to view results.
+    </p>
+  </div>
+  <section>
+    <img id="image1" src="" />
+    <img id="image2" src="" />
+    <img id="image3" src="" />
+  </section>
+  <div>View Results</div>
+  <ul></ul>
+  <div>
+    <canvas id="myChart"></canvas>
+  </div>
+</div>
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
     <script src="duck.js"></script>
