--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Moquzilla</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -26,6 +26,8 @@
   </section>
   <div>View Results</div>
   <ul></ul>
+
+  <!-- this is the bar graph  -->
   <div>
     <canvas id="myChart"></canvas>
   </div>
