--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
     <script src="duck.js"></script>
   </body>
 
-  <div></div>
+  <div><p>When completed, don't forget to hit view results above to recieve the results of voting.</p></div>
 </html>
