--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <body>
     <main>
       <div>
-        <h1>ODD DUCK Products</h1>
-        <p>
+        <h1><span>Odd </span>Duck<span> Products</span></h1>        <p>
           Please select one of the three (3) products down below. Once products
           have cycled through twenty-five (25) voting session, please click the
           results tab to view results.
